--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -82,7 +82,8 @@ button:disabled {
   border-radius: 5px;
   padding: 0px 20px;
   margin: 20px;
-  width: 230px;
+  width: 300px;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
 .form-field {
@@ -224,4 +225,43 @@ select {
   .chat__footer button {
     margin-right: 0px;
   }
+}
+
+footer {
+  position:absolute;
+  bottom:0;
+  width:100%;
+  height:60px;
+  //background:#6cf;
+  text-align: center;
+}
+
+footer a {
+  color: white;
+  /* text-decoration: none; */
+}
+
+.test-btn-div {
+  /* position: absolute;
+  top: 0;
+  right: 0;
+  margin: 1px 18px 0 0;  */
+  text-align: center;
+}
+
+.test-btn-div a {
+  color: #e6eaee;
+  font-size: 12px;
+}
+
+.nav-div {
+  position: absolute;
+  bottom: 0;
+  margin: 0 0 10px 10px;
+}
+
+.nav-div a {
+  color: #e6eaee;
+  font-size: 14px;
+  display: block;
 }
